--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clean-css": "~3.4.1",
     "create-servers": "~2.3.0",
     "datastar": "~1.3.1",
+    "diagnostics": "~1.0.1",
     "emits": "~3.0.0",
     "errs": "~0.3.2",
     "feedsme-api-client": "^1.2.0",
@@ -53,7 +54,6 @@
     "npm": "~3.10.0",
     "object-assign": "~4.0.1",
     "one-time": "~0.0.4",
-    "warehouse-models": "^5.0.0",
     "repair": "~0.1.0",
     "safe-regex": "~1.1.0",
     "slay": "^1.0.0",
@@ -65,6 +65,7 @@
     "toml": "^2.3.0",
     "uglify-js": "^2.7.5",
     "walk": "~2.3.9",
+    "warehouse-models": "^5.0.0",
     "webpack": "^1.12.12",
     "winston": "^2.2.0"
   },
