--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.5.2",
   "description": "Build and compile npm packages",
   "main": "./lib/index.js",
+  "bin": {
+    "carpenterd": "bin/server"
+  },
   "scripts": {
     "start": "bin/server",
     "test": "istanbul cover _mocha -- --reporter spec $(find test -path test/fixtures -prune -o -name '*.test.js')",
