--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "object-assign": "~4.0.1",
     "one-time": "~0.0.4",
     "repair": "~0.1.0",
+    "resolve": "~1.3.3",
     "safe-regex": "~1.1.0",
     "slay": "~1.0.1",
     "slay-config": "^2.0.1",
