[fix] linting deps

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mkdirp": "^0.5.1",
     "node-uuid": "~1.4.3",
     "npm": "^3.10.10",
+    "nsq.js-k8": "^1.0.3",
     "object-assign": "~4.0.1",
     "one-time": "~0.0.4",
     "repair": "~0.1.0",
@@ -83,6 +84,7 @@
     "hyperquest": "~1.2.0",
     "istanbul": "~0.4.5",
     "mocha": "~3.1.0",
-    "nock": "2.10.0"
+    "nock": "2.10.0",
+    "sinon": "^3.2.1"
   }
 }
