--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "bin/server",
-    "test": "istanbul cover _mocha -- --reporter spec $(find test -path test/fixtures -prune -o -name '*.test.js')",
+    "test": "istanbul cover _mocha $(find test -path test/fixtures -prune -o -name '*.test.js')",
     "watch": "mocha --watch --reporter spec $(find test -path test/fixtures -prune -o -name '*.test.js')",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/lib/",
     "pretest": "npm run eslint"
