--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "walk": "~2.3.9",
     "warehouse-models": "^5.0.0",
     "webpack": "^1.12.12",
-    "winston": "^2.2.0",
-    "workers-factory": "^1.5.0"
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "assume": "^1.4.1",
