--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "errs": "~0.3.2",
     "feedsme-api-client": "^2.0.0",
     "fingerprinting": "~1.0.0",
+    "from2": "^2.3.0",
     "joi": "~6.7.1",
     "json-try-parse": "~1.0.0",
     "lodash.intersection": "~3.2.0",
