--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "json-try-parse": "~1.0.0",
     "lodash.intersection": "~3.2.0",
     "lodash.omit": "^4.5.0",
+    "mime": "^2.0.3",
     "minimist": "~1.2.0",
     "minimize": "~1.7.0",
     "mkdirp": "^0.5.1",
