[dist] use http loglevel by default

--- a/config.example.json
+++ b/config.example.json
@@ -8,7 +8,7 @@
   "logger": { "silent": true },
   "npm": {
     "registry": "https://registry.npmjs.org",
-    "loglevel": "warn"
+    "loglevel": "http"
   },
   "json": {
     "limit": "100mb",
