--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: true
 language: node_js
 node_js:
+  - "8"
   - "6"
-  - "4"
 services:
   - cassandra
   - redis-server
 before_install:
-  - "npm install -g npm@3"
+  - "npm install -g npm@latest-5"
