--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - "8"
   - "10"
+matrix:
+  allow_failures:
+  - node_js: "10"
 services:
   - cassandra
   - redis-server
