Send messages to NSQ to support the status api (#34)
* update to nyc over istanbul

* [minor] Add nsq status writing for status api

* rename 'constructor' to 'construct' allow nyc to function

* [test] Move to latest sinon & fix broken test

* [test] Tests for writing NSQ in progress

* [test][tiny] Needed to plumb through locale differently, read build queue count differently, and added more tests to make sure everything was working

* [test] Verify NSQ for buildOne also, merge logic

* Drop node@6 from travis & circle, add node@10 to travis

* PR feedback, refactor status-writer, make messages more human readable, also make sure we write statuses for npm install

* remove extraneous parens

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ sudo: true
 language: node_js
 node_js:
   - "8"
-  - "6"
+  - "10"
+matrix:
+  allow_failures:
+  - node_js: "10"
 services:
   - cassandra
   - redis-server
