--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "babel": "~5.8.20",
     "bffs": "^5.0.0",
     "bl": "~1.1.2",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.18.3",
     "browserify": "~12.0.1",
     "cdnup": "^2.2.1",
     "clean-css": "~3.4.1",
     "create-servers": "~2.3.0",
-    "datastar": "~1.3.1",
+    "datastar": "^1.6.0",
     "diagnostics": "~1.0.1",
     "emits": "~3.0.0",
     "errs": "~0.3.2",
