--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "bin/server",
     "report": "nyc report --reporter=lcov",
     "test": "nyc npm run test:mocha",
-    "test:mocha": "mocha test/**/*.test.js",
+    "test:mocha": "mocha 'test/**/*.test.js'",
     "watch": "mocha --watch --reporter spec $(find test -path test/fixtures -prune -o -name '*.test.js')",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/lib/",
     "posttest": "npm run eslint"
