--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "minimize": "~1.7.0",
     "mkdirp": "^0.5.1",
     "node-uuid": "~1.4.3",
-    "npm": "^6.5.0",
+    "npm": "5.10.0",
     "nsq-stream": "^2.1.0",
     "nsq.js-k8": "^1.1.1",
     "object-assign": "~4.0.1",
