[dist] bump cdnup/bffs

--- a/config.example.json
+++ b/config.example.json
@@ -28,6 +28,7 @@
     "prefix": "wrhs",
     "cdn": {
       "prod": {
+        "acl": "public-read",
         "pkgcloud": {
           "provider": "amazon",
           "endpoint": "aws.amazon.net",
@@ -38,6 +39,7 @@
         "url": "https://mycloudfrontURL.com"
       },
       "test": {
+        "acl": "public-read",
         "pkgcloud": {
           "provider": "amazon",
           "endpoint": "aws.amazon.net",
@@ -48,6 +50,7 @@
         "url": "https://mycloudfrontURL.com"
       },
       "dev": {
+        "acl": "public-read",
         "pkgcloud": {
           "provider": "amazon",
           "endpoint": "aws.amazon.net",
