--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "async": "~1.4.2",
     "babel": "~5.8.20",
     "bffs": "^5.4.0",
-    "bl": "^2.1.2",
-    "body-parser": "^1.18.3",
+    "bl": "^2.2.0",
+    "body-parser": "^1.19.0",
     "browserify": "~12.0.1",
     "cdnup": "^3.0.0",
     "clean-css": "~3.4.1",
     "create-servers": "~2.3.0",
-    "datastar": "^1.6.0",
+    "datastar": "^1.7.0",
     "diagnostics": "~1.0.1",
     "emits": "~3.0.0",
     "errs": "~0.3.2",
@@ -55,9 +55,9 @@
     "minimize": "~1.7.0",
     "mkdirp": "^0.5.1",
     "node-uuid": "~1.4.3",
-    "npm": "^6.5.0",
+    "npm": "^6.9.0",
     "nsq-stream": "^2.1.0",
-    "nsq.js-k8": "^1.1.2",
+    "nsq.js-k8": "^1.1.3",
     "object-assign": "~4.0.1",
     "one-time": "~0.0.4",
     "repair": "~0.1.0",
@@ -68,28 +68,28 @@
     "slay-config": "^2.0.1",
     "slay-contextlog": "~2.0.0",
     "slay-log": "^2.1.0",
-    "tar-fs": "~1.8.1",
+    "tar-fs": "^1.16.3",
     "through2": "~2.0.0",
-    "toml": "^2.3.0",
+    "toml": "^2.3.6",
     "uglify-js": "^2.7.5",
     "walk": "~2.3.9",
-    "warehouse-models": "^5.0.0",
+    "warehouse-models": "^5.9.1",
     "webpack": "^1.12.12",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "assume": "^2.1.0",
-    "assume-sinon": "^1.0.0",
+    "assume": "^2.2.0",
+    "assume-sinon": "^1.0.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.0",
+    "eslint": "^5.16.0",
     "eslint-config-godaddy": "^3.0.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-json": "^1.4.0",
+    "eslint-plugin-mocha": "^5.3.0",
     "hyperquest": "^2.1.3",
     "mocha": "^5.2.0",
     "nock": "^10.0.6",
-    "nyc": "^13.1.0",
+    "nyc": "^13.3.0",
     "rip-out": "^1.0.0",
-    "sinon": "^7.2.2"
+    "sinon": "^7.3.2"
   }
 }
