--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js:
   - "10"
@@ -6,8 +7,6 @@ node_js:
 matrix:
   allow_failures:
   - node_js: "12"
-jdk:
-  - openjdk11
 before_install:
   - sudo rm -rf /var/lib/cassandra/*
   - wget http://www.us.apache.org/dist/cassandra/3.11.4/apache-cassandra-3.11.4-bin.tar.gz && tar -xvzf apache-cassandra-3.11.4-bin.tar.gz
