Remove ES6 builder type as option (#52)
* [minor] remove es6 specs

* [test] remove es6 references from tests

* [fix] lint warnings

* [dist] update all deps

* [test] travis config

* [test] remove node@8 as test target

* [test] update cassandra version

* [fix] remove jdk install

* [fix] remove superfluous npm i

* [test] add openjdk11

* [fix] allow failures for 12

* [fix] final attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js:
-  - "8"
   - "10"
+  - "12"
 matrix:
   allow_failures:
-  - node_js: "10"
-services:
-  - cassandra
-  - redis-server
+  - node_js: "12"
 before_install:
-  - "npm install -g npm@latest-5"
+  - sudo rm -rf /var/lib/cassandra/*
+  - wget http://www.us.apache.org/dist/cassandra/3.11.4/apache-cassandra-3.11.4-bin.tar.gz && tar -xvzf apache-cassandra-3.11.4-bin.tar.gz
+  - sudo sh ./apache-cassandra-3.11.4/bin/cassandra -R
+  - sleep 20
