--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nsq.js-k8": "^1.1.3",
     "object-assign": "~4.1.1",
     "one-time": "~1.0.0",
+    "p-limit": "^2.2.1",
     "repair": "~0.1.0",
     "resolve": "~1.11.1",
     "retryme": "^1.1.0",
