--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 sudo: required
-dist: trusty
 language: node_js
+
 node_js:
   - "10"
   - "12"
-matrix:
-  allow_failures:
-  - node_js: "12"
+
+services:
+  - docker
+
 before_install:
-  - sudo rm -rf /var/lib/cassandra/*
-  - wget http://www.us.apache.org/dist/cassandra/3.11.4/apache-cassandra-3.11.4-bin.tar.gz && tar -xvzf apache-cassandra-3.11.4-bin.tar.gz
-  - sudo sh ./apache-cassandra-3.11.4/bin/cassandra -R
-  - sleep 20
+  - docker pull localstack/localstack
+  - docker run -d -p 127.0.0.1:4569:4569 -p 127.0.0.1:4572:4572 --name localstack localstack/localstack
+
+install: npm install
+
+env:
+  - AWS_ACCESS_KEY_ID=foobar AWS_SECRET_ACCESS_KEY=foobar
