--- a/config.example.json
+++ b/config.example.json
@@ -62,18 +62,8 @@
       }
     }
   },
-  "datastar": {
-    "config": {
-      "keyspace": "carpenter_test",
-      "user": "cassandra",
-      "password": "cassandra",
-      "hosts": [
-        "127.0.0.1"
-      ],
-      "keyspaceOptions": {
-        "class": "SimpleStrategy",
-        "replication_factor": 1
-      }
-    }
+  "database": {
+    "endpoint": "aws.amazon.net",
+    "region": "us-east-1"
   }
 }
