[fix] remove s3 exposure

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 before_install:
   - docker pull localstack/localstack
-  - docker run -d -p 127.0.0.1:4569:4569 -p 127.0.0.1:4572:4572 --name localstack localstack/localstack
+  - docker run -d -p 127.0.0.1:4569:4569 --name localstack localstack/localstack
 
 install: npm install
 
