--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "aws-liveness": "^1.1.0",
     "aws-sdk": "^2.569.0",
     "bffs": "^7.0.0",
-    "bl": "^3.0.0",
+    "bl": "^4.0.0",
     "body-parser": "^1.19.0",
     "cdnup": "^4.0.0",
     "clean-css": "~4.2.1",
-    "create-servers": "~3.0.0",
+    "create-servers": "^3.1.0",
     "diagnostics": "~2.0.2",
     "dynamodb-x": "^1.2.3",
     "emits": "~3.0.0",
@@ -62,10 +62,10 @@
     "one-time": "~1.0.0",
     "p-limit": "^2.2.1",
     "repair": "~0.1.0",
-    "resolve": "~1.11.1",
+    "resolve": "^1.12.0",
     "retryme": "^1.1.0",
-    "safe-regex": "~2.0.2",
-    "slay": "~2.0.0",
+    "safe-regex": "^2.1.1",
+    "slay": "^3.1.1",
     "slay-config": "^2.3.0",
     "slay-contextlog": "~2.0.0",
     "slay-log": "^2.3.0",
@@ -83,12 +83,12 @@
     "babel-eslint": "^10.0.1",
     "clone": "^2.1.2",
     "eslint": "^6.1.0",
-    "eslint-config-godaddy": "^3.1.0",
-    "eslint-plugin-json": "^1.4.0",
+    "eslint-config-godaddy": "^4.0.0",
+    "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-mocha": "^6.0.0",
     "hyperquest": "^2.1.3",
     "mocha": "^6.2.0",
-    "nock": "^10.0.6",
+    "nock": "^11.7.0",
     "nyc": "^14.1.0",
     "rip-out": "^1.0.0",
     "sinon": "^7.3.2"
