--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "license": "MIT",
   "dependencies": {
     "async": "~3.1.0",
-    "aws-liveness": "^1.1.0",
-    "aws-sdk": "^2.569.0",
-    "bffs": "^7.0.0",
-    "bl": "^4.0.0",
+    "aws-liveness": "^1.1.1",
+    "aws-sdk": "^2.1225.0",
+    "bffs": "^7.1.0",
+    "bl": "^4.1.0",
     "body-parser": "^1.19.0",
-    "cdnup": "^4.0.0",
+    "cdnup": "^4.1.0",
     "clean-css": "~4.2.1",
-    "create-servers": "^3.1.0",
+    "create-servers": "^3.2.0",
     "diagnostics": "~2.0.2",
     "dynamodb-x": "^1.2.3",
     "emits": "~3.0.0",
-    "errs": "~0.3.2",
+    "errs": "^0.3.2",
     "feedsme-api-client": "^3.0.0",
     "fingerprinting": "~1.0.0",
     "from2": "^2.3.0",
@@ -53,44 +53,44 @@
     "lodash.intersection": "~4.4.0",
     "lodash.omit": "^4.5.0",
     "minimist": "~1.2.0",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "^0.5.6",
     "node-uuid": "~1.4.3",
-    "npm": "^6.9.0",
-    "nsq-stream": "^2.1.0",
+    "npm": "^6.14.17",
+    "nsq-stream": "^2.1.1",
     "nsq.js-k8": "^1.2.1",
     "object-assign": "~4.1.1",
     "one-time": "~1.0.0",
-    "p-limit": "^2.2.1",
-    "repair": "~0.1.0",
-    "resolve": "^1.12.0",
+    "p-limit": "^2.3.0",
+    "repair": "^0.1.1",
+    "resolve": "^1.22.1",
     "retryme": "^1.1.0",
     "safe-regex": "^2.1.1",
     "slay": "^3.1.1",
     "slay-config": "^2.3.0",
     "slay-contextlog": "~2.0.0",
-    "slay-log": "^2.3.0",
-    "tar-fs": "^2.0.0",
+    "slay-log": "^2.3.2",
+    "tar-fs": "^2.1.1",
     "through2": "~3.0.1",
     "toml": "^3.0.0",
-    "uglify-js": "^3.6.0",
+    "uglify-js": "^3.17.2",
     "walk": "~2.3.14",
-    "warehouse-models": "^6.0.0",
-    "winston": "^3.2.0"
+    "warehouse-models": "^6.0.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "assume": "^2.2.0",
-    "assume-sinon": "^1.0.1",
-    "babel-eslint": "^10.0.1",
+    "assume": "^2.3.0",
+    "assume-sinon": "^1.1.0",
+    "babel-eslint": "^10.1.0",
     "clone": "^2.1.2",
-    "eslint": "^6.1.0",
-    "eslint-config-godaddy": "^4.0.0",
-    "eslint-plugin-json": "^2.0.1",
-    "eslint-plugin-mocha": "^6.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-godaddy": "^4.0.1",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-mocha": "^6.3.0",
     "hyperquest": "^2.1.3",
-    "mocha": "^6.2.0",
-    "nock": "^11.7.0",
-    "nyc": "^14.1.0",
+    "mocha": "^6.2.3",
+    "nock": "^11.9.1",
+    "nyc": "^14.1.1",
     "rip-out": "^1.0.0",
-    "sinon": "^7.3.2"
+    "sinon": "^7.5.0"
   }
 }
