--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,13 +20,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Prepare Localstack container
         run: |
-            docker-compose -f docker-compose.yaml up -d
+            docker-compose -f docker-compose.yml up -d
             sleep 20
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          
+
       - name: Install Dependencies
         run: npm install
       
